--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -7,27 +7,43 @@
  */
 
 plugins {
-    // Apply the java-library plugin for API and implementation separation.
     id 'java-library'
+    id 'maven-publish'
+    id 'signing'
 }
 
+version = '1.0.0'
+group = 'jp.tkms'
+
 repositories {
-    // Use Maven Central for resolving dependencies.
-    mavenCentral()
+    jcenter()
 }
 
 dependencies {
-    // Use JUnit Jupiter for testing.
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
-
-    // This dependency is exported to consumers, that is to say found on their compile classpath.
     api 'org.apache.commons:commons-math3:3.6.1'
-
-    // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.google.guava:guava:30.1.1-jre'
 }
 
-tasks.named('test') {
+//tasks.named('test') {
     // Use JUnit Platform for unit tests.
-    useJUnitPlatform()
+    //useJUnitPlatform()
+//}
+
+
+publishing {
+  publications {
+    myLibrary(MavenPublication) {
+      from components.java
+    }
+  }
+
+  repositories {
+    maven {
+      name = 'myRepo'
+        url = layout.buildDirectory.dir("repo")
+    }
+  }
 }
+
+
