--- a/tkms-java-utils/build.gradle
+++ b/tkms-java-utils/build.gradle
@@ -16,19 +16,18 @@ version = '1.0.0'
 group = 'jp.tkms'
 
 repositories {
-    jcenter()
+  mavenCentral()
 }
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
-    api 'org.apache.commons:commons-math3:3.6.1'
-    implementation 'com.google.guava:guava:30.1.1-jre'
+    //api 'org.apache.commons:commons-math3:3.6.1'
+    //implementation 'com.google.guava:guava:30.1.1-jre'
 }
 
-//tasks.named('test') {
-    // Use JUnit Platform for unit tests.
-    //useJUnitPlatform()
-//}
+tasks.named('test') {
+    useJUnitPlatform()
+}
 
 
 publishing {
@@ -41,7 +40,7 @@ publishing {
   repositories {
     maven {
       name = 'myRepo'
-        url = layout.buildDirectory.dir("repo")
+      url = layout.buildDirectory.dir("repo")
     }
   }
 }
